--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,11 +6,12 @@
 <body>
 <h1>{{title}}</h1>
 
+<a href="/posts">Atrás</a><br><br>
+
 {{instance.title}} <br>
 {{instance.content}}<br>
 {{instance.timestamp}}<br>
 {{instance.updated}}<br>
-{{instance.id}}<br><br>
 
 </body>
 </html>
