templates inheritance, clean code, add style

--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>{{title}}</title>
-</head>
-<body>
-	<h1>{{title}}</h1>
+{% extends "base.html" %}
 
-	<form method="Post" action="">
-		{% csrf_token %}
-		{{ form.as_p }}
-		{% if instance %}
-			<input type="submit" value="Edit Post" />
-		{% else %}
-			<input type="submit" value="Create Post" />	
-		{% endif %}
-	</form>
-	
-
-</body>
-</html>
+{% block content %}
+<form method="Post" action="">
+	{% csrf_token %}
+	{{ form.as_p }}
+	{% if instance %}
+		<input type="submit" value="Edit Post" />
+	{% else %}
+		<input type="submit" value="Create Post" />	
+	{% endif %}
+</form>
+{% endblock content %}
