--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title> {{title}} </title>
-</head>
-<body>
+{% extends "base.html" %}
 
-{% if messages %}
-<ul class="messages">
-	{% for message in messages %}
-		<li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-	{% endfor %}
-</ul>
-{% endif %}
+{%block head_title %} {{title}} | {{ block.super }} {% endblock %}
 
-<h1>{{title}}</h1>
+{% block content %}
 
-<a href="/posts">Atrás</a><br><br>
+<a href="/posts">Atrás</a>   <a href="delete">Delete</a><br><br>
 
 {{instance.title}} <br>
 {{instance.content}}<br>
 {{instance.timestamp}}<br>
 {{instance.updated}}<br>
 
-</body>
-</html>
+{% endblock content %}
